# antlr-calc

./: CMakeLists.txt  Calculation.g4  Makefile  MyListener.cpp  MyListener.h  MyVisitor.cpp  MyVisitor.h  Numbers.g4  calculation.expr  main.cpp  test.sh
.antlr/: calculation.interp  calculationLexer.interp  numbers.interp  numbersLexer.interp
